Fix sign up banner alignment on index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,6 @@ header div, nav {
 
 #main-nav {
     font-size: 1rem;
-    margin-left: 3em;
     float: left;
 }
 
@@ -173,7 +172,6 @@ header div, nav {
 
 header button {
     float: right;
-    margin-right: 3em;
 }
 
 
@@ -201,11 +199,8 @@ header button {
 }
 
 #cover-text {
-    width: 100%;
     max-width: 1280px;
-    background: transparent;
     top: 30%;
-    left: 6rem;
     position: absolute;
 }
 
